--- a/src/components/pagination.astro
+++ b/src/components/pagination.astro
@@ -2,7 +2,7 @@
 let { current } = Astro.props
 ---
 
-<nav aria-label="Pagination">
+<nav class="pages" aria-label="Pagination">
 	<a href="../">{ "View All" }</a>
 	<!--<div>
 		Horizontal List Pagination
