--- a/src/pages/[category]/[page].astro
+++ b/src/pages/[category]/[page].astro
@@ -1,10 +1,7 @@
 ---
 import * as Content from "astro:content"
 
-import Imports from "../../components/common_imports.astro"
-import Metadata from "../../components/common_metadata.astro"
-import Header from "../../components/header.astro"
-import Footer from "../../components/footer.astro"
+import Base from "../../layouts/base.astro"
 import AppsList from "../../components/apps_list.astro"
 import Pagination from "../../components/pagination.astro"
 
@@ -41,29 +38,19 @@ let apps = packaged.concat(live).filter(function(app) {
 })
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<Imports/>
+<Base title={ page + " - " + Astro.props.category.name + " - FF Apps Archive" }>
+	<Fragment slot="imports">
 		<link rel="stylesheet" href="/lists.css">
 		<link rel="stylesheet" href="/pagination.css">
 		<script src="/pagination.js" defer></script>
-		<link rel="icon" href={ "/icons/" + category + ".png" } type="image/png">
-		<Metadata/>
-		<title>Page { page } - { Astro.props.category.name } - FF Apps Archive</title>
-		<link rel="canonical" href={ "/" + category + "/" }>
-	</head>
-	<body>
-		<Header/>
-		<main>
-			<header>
-				<img src={ "/icons/" + category + ".png" } alt="" width="40" height="40">
-				<h2>{ Astro.props.category.name } - Page { page }</h2>
-			</header>
-			<Pagination current={ page }/>
-			<AppsList apps={ apps }/>
-			<Pagination current={ page }/>
-		</main>
-		<Footer/>
-	</body>
-</html>
+	</Fragment>
+	<link slot="icon" rel="icon" href={ "/icons/" + category + ".png" } type="image/png">
+
+	<link slot="metadata" rel="canonical" href={ "/" + category + "/" }>
+
+	<h2 slot="header">{ Astro.props.category.name } - Page { page }</h2>
+
+	<Pagination current={ page }/>
+	<AppsList apps={ apps }/>
+	<Pagination current={ page }/>
+</Base>
