--- a/src/pages/[category]/index.astro
+++ b/src/pages/[category]/index.astro
@@ -1,9 +1,7 @@
 ---
 import * as Content from "astro:content"
 
-import Header from "../../components/header.astro"
-import Footer from "../../components/footer.astro"
-import Metadata from "../../components/common_metadata.astro"
+import Base from "../../layouts/base.astro"
 import AppsList from "../../components/apps_list.astro"
 
 import categories from "../../categories.json" with { type: "json" }
@@ -20,26 +18,14 @@ let apps = packaged.concat(live).filter(app => app.data.categories.includes(cate
 
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="/common.css">
-		<link rel="stylesheet" href="/lists.css">
-		<link rel="icon" href={ "/icons/" + category.slug + ".png" } type="image/png">
+<Base title={category.name}>
+	<link slot="imports" rel="stylesheet" href="/lists.css">
+	<link slot="icon" rel="icon" href={"/icons/" + category.slug + ".png"} type="image/png">
 
-		<Metadata/>
-		<title>{ category.name } - FF Apps Archive</title>
-	</head>
-	<body>
-		<Header/>
-		<main>
-			<header>
-				<img src={ "/icons/" + category.slug + ".png" } alt="" width="40" height="40">
-				<h2>{ category.name }</h2>
-			</header>
-			<AppsList apps={ apps }/>
-		</main>	
-		<Footer/>
-	</body>
-</html>
+	<Fragment slot="header">
+		<img src={"/icons/" + category.slug + ".png"} alt="" width="40" height="40">
+		<h2>{category.name}</h2>
+	</Fragment>
+
+	<AppsList apps={apps}/>
+</Base>
