--- a/src/pages/all/[page].astro
+++ b/src/pages/all/[page].astro
@@ -1,10 +1,7 @@
 ---
 import * as Content from "astro:content"
 
-import Imports from "../../components/common_imports.astro"
-import Metadata from "../../components/common_metadata.astro"
-import Header from "../../components/header.astro"
-import Footer from "../../components/footer.astro"
+import Base from "../../layouts/base.astro"
 import AppsList from "../../components/apps_list.astro"
 import Pagination from "../../components/pagination.astro"
 
@@ -32,27 +29,17 @@ let apps = packaged.concat(live).filter(function(app) {
 })
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<Imports/>
+<Base title={"Page " + page + " - All Apps"}>
+	<Fragment slot="imports">
 		<link rel="stylesheet" href="/lists.css">
 		<link rel="stylesheet" href="/pagination.css">
 		<script src="/pagination.js" defer></script>
-		<Metadata/>
-		<title>Page { page } - All Apps - FF Apps Archive</title>
-		<link rel="canonical" href="/all/">
-	</head>
-	<body>
-		<Header/>
-		<main>
-			<header>
-				<h2>All Apps - Page { page }</h2>
-			</header>
+	</Fragment>
+	<link slot="metadata" rel="canonical" href="/all/">
+
+	<h2 slot="header">All Apps - Page {page}</h2>
+
 			<Pagination current={page} />
 			<AppsList apps={ apps }/>
 			<Pagination current={page} />
-		</main>
-		<Footer/>
-	</body>
-</html>
+</Base>
