--- a/src/pages/all/index.astro
+++ b/src/pages/all/index.astro
@@ -1,10 +1,7 @@
 ---
 import * as Content from "astro:content"
 
-import Imports from "../../components/common_imports.astro"
-import Metadata from "../../components/common_metadata.astro"
-import Header from "../../components/header.astro"
-import Footer from "../../components/footer.astro"
+import Base from "../../layouts/base.astro"
 import AppsList from "../../components/apps_list.astro"
 
 import { live } from "../../validate_hosted_apps.js"
@@ -13,22 +10,8 @@ let packaged = await Content.getCollection("metadata", app => app.data.app_type 
 let apps = packaged.concat(live)
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<Imports/>
-		<link rel="stylesheet" href="/lists.css">
-		<Metadata/>
-		<title>All Apps - FF Apps Archive</title>
-	</head>
-	<body>
-		<Header/>
-		<main>
-			<header>
-				<h2>All Apps</h2>
-			</header>
-			<AppsList apps={ apps }/>
-		</main>
-		<Footer/>
-	</body>
-</html>
+<Base title="All Apps">
+	<link slot="imports" rel="stylesheet" href="/lists.css">
+
+	<AppsList apps={ apps }>
+</Base>
