--- a/src/pages/dead/[page].astro
+++ b/src/pages/dead/[page].astro
@@ -1,10 +1,5 @@
 ---
-import * as Content from "astro:content"
-
-import Imports from "../../components/common_imports.astro"
-import Metadata from "../../components/common_metadata.astro"
-import Header from "../../components/header.astro"
-import Footer from "../../components/footer.astro"
+import Base from "../../layouts/base.astro"
 import AppsList from "../../components/apps_list.astro"
 
 import { dead } from "../../validate_hosted_apps.js"
@@ -30,27 +25,17 @@ let apps = dead.filter(app => {
 })
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<Imports/>
+<Base title={ page + " - Dead Hosted Apps"}>
+	<Fragment slot="imports">
 		<link rel="stylesheet" href="/lists.css">
 		<link rel="stylesheet" href="/pagination.css">
 		<script src="/pagination.js" defer></script>
-		<Metadata/>
-		<title>Page { page } - Dead Hosted Apps - FF Apps Archive</title>
-		<link rel="canonical" href="/dead/">
-	</head>
-	<body>
-		<Header/>
-		<main>
-			<header>
-				<h2>Dead Hosted Apps - Page { page }</h2>
-			</header>
-			<Pagination current={page} />
+	</Fragment>
+	<link slot="metadata" rel="canonical" href="/dead/">
+
+	<h2 slot="header">Dead Hosted Apps - Page { page }</h2>
+
+	<Pagination current={page}/>
 			<AppsList apps={ apps }/>
-			<Pagination current={page} />
-		</main>
-		<Footer/>
-	</body>
-</html>
+	<Pagination current={page}/>
+</Base>
