--- a/src/pages/hosted/[page].astro
+++ b/src/pages/hosted/[page].astro
@@ -1,12 +1,8 @@
 ---
-import * as Content from "astro:content"
-
-import Imports from "../../components/common_imports.astro"
-import Metadata from "../../components/common_metadata.astro"
-import Header from "../../components/header.astro"
-import Footer from "../../components/footer.astro"
+import Base from "../../layouts/base.astro"
 import AppsList from "../../components/apps_list.astro"
 import Pagination from "../../components/pagination.astro"
+
 import { live } from "../../validate_hosted_apps.js"
 
 const characters = [ "1", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z" ]
@@ -29,27 +25,17 @@ let apps = live.filter(app => {
 })
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<Imports/>
+<Base title={ page + " - Hosted Apps"}>
+	<Fragment slot="imports">
 		<link rel="stylesheet" href="/lists.css">
 		<link rel="stylesheet" href="/pagination.css">
 		<script src="/pagination.js" defer></script>
-		<Metadata/>
-		<title>Page { page } - Hosted Apps - FF Apps Archive</title>
-		<link rel="canonical" href="/hosted/">
-	</head>
-	<body>
-		<Header/>
-		<main>
-			<header>
-				<h2>Hosted Apps - Page { page }</h2>
-			</header>
-			<Pagination current={page} />
-			<AppsList apps={ apps }/>
-			<Pagination current={page} />
-		</main>
-		<Footer/>
-	</body>
-</html>
+	</Fragment>
+	<link slot="metadata" rel="canonical" href="/hosted/">
+
+	<h2 slot="header">Hosted Apps - Page {page}</h2>
+
+			<Pagination current={page}/>
+	<AppsList apps={ apps }/>
+			<Pagination current={page}/>
+</Base>
