--- a/src/pages/packaged/[page].astro
+++ b/src/pages/packaged/[page].astro
@@ -1,10 +1,7 @@
 ---
 import * as Content from "astro:content"
 
-import Imports from "../../components/common_imports.astro"
-import Metadata from "../../components/common_metadata.astro"
-import Header from "../../components/header.astro"
-import Footer from "../../components/footer.astro"
+import Base from "../../layouts/base.astro"
 import AppsList from "../../components/apps_list.astro"
 import Pagination from "../../components/pagination.astro"
 
@@ -31,27 +28,17 @@ let apps = await Content.getCollection("metadata", function(app) {
 })
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<Imports/>
+<Base title={ page + " - Packaged Apps"}>
+	<Fragment slot="imports">
 		<link rel="stylesheet" href="/lists.css">
 		<link rel="stylesheet" href="/pagination.css">
 		<script src="/pagination.js" defer></script>
-		<Metadata/>
-		<title>Page { page } - Packaged Apps - FF Apps Archive</title>
-		<link rel="canonical" href="/packaged/">
-	</head>
-	<body>
-		<Header/>
-		<main>
-			<header>
-				<h2>Packaged Apps - Page { page }</h2>
-			</header>
-			<Pagination current={page} />
-			<AppsList apps={ apps }/>
-			<Pagination current={page} />
-		</main>
-		<Footer/>
-	</body>
-</html>
+	</Fragment>
+	<link slot="metadata" rel="canonical" href="/packaged/">
+
+	<h2 slot="header">Packaged Apps - Page {page}</h2>
+
+			<Pagination current={page}/>
+	<AppsList apps={ apps }/>
+			<Pagination current={page}/>
+</Base>
