--- a/src/pages/works-offline/[page].astro
+++ b/src/pages/works-offline/[page].astro
@@ -1,10 +1,7 @@
 ---
 import * as Content from "astro:content"
 
-import Imports from "../../components/common_imports.astro"
-import Metadata from "../../components/common_metadata.astro"
-import Header from "../../components/header.astro"
-import Footer from "../../components/footer.astro"
+import Base from "../../layouts/base.astro"
 import AppsList from "../../components/apps_list.astro"
 import Pagination from "../../components/pagination.astro"
 
@@ -35,27 +32,18 @@ let apps = packaged.concat(live).filter(function(app) {
 })
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<Imports/>
+<Base title={ page + " - Works Offline"}>
+	<Fragment slot="imports">
 		<link rel="stylesheet" href="/lists.css">
 		<link rel="stylesheet" href="/pagination.css">
 		<script src="/pagination.js" defer></script>
-		<Metadata/>
-		<title>Page { page } - Works Offline - FF Apps Archive</title>
-		<link rel="canonical" href="/works-offline/">
-	</head>
-	<body>
-		<Header/>
-		<main>
-			<header>
-				<h2>Works Offline - Page { page }</h2>
-			</header>
-			<Pagination current={page} />
-			<AppsList apps={ apps }/>
-			<Pagination current={page} />
-		</main>
-		<Footer/>
-	</body>
-</html>
+	</Fragment>
+	<link slot="icon" rel="icon" href={"/icons/works-offline.png"} type="image/png">
+	<link slot="metadata" rel="canonical" href="/works-offline/">
+
+	<h2 slot="header">Works Offline - Page { page }</h2>
+
+	<Pagination current={ page }/>
+	<AppsList apps={ apps }/>
+	<Pagination current={ page }/>
+</Base>
