--- a/src/pages/works-offline/index.astro
+++ b/src/pages/works-offline/index.astro
@@ -1,9 +1,7 @@
 ---
 import * as Content from "astro:content"
 
-import Metadata from "../../components/common_metadata.astro"
-import Header from "../../components/header.astro"
-import Footer from "../../components/footer.astro"
+import Base from "../../layouts/base.astro"
 import AppsList from "../../components/apps_list.astro"
 
 import { live } from "../../validate_hosted_apps.js"
@@ -12,25 +10,14 @@ let packaged = await Content.getCollection("metadata", app => app.data.app_type 
 let apps = packaged.concat(live).filter(app => app.data.is_offline)
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="/common.css">
-		<link rel="stylesheet" href="/lists.css">
-		<link rel="icon" href={ "/icons/works-offline.png" } type="image/png">
-		<Metadata/>
-		<title>Works Offline - FF Apps Archive</title>
-	</head>
-	<body>
-		<Header/>
-		<main>
-			<header>
-				<img src={ "/icons/works-offline.png" } alt="" width="40" height="40">
+<Base title="Works Offline">
+	<link slot="imports" rel="stylesheet" href="/lists.css" />
+	<link slot="icon" rel="icon" href={"/icons/works-offline.png"} type="image/png">
+
+	<Fragment slot="header">
+		<img src="/icons/works-offline.png" alt="" width="40" height="40">
 				<h2>Works Offline</h2>
-			</header>
-			<AppsList apps={ apps }/>
-		</main>
-		<Footer/>
-	</body>
-</html>
+	</Fragment>
+
+	<AppsList apps={ apps }/>
+</Base>
