--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,7 @@
 import Base from "../layouts/base.astro"
 ---
 
-<Base title="Contact">
+<Base title="Contact" searchable>
 	<link slot="imports" rel="stylesheet" href="/contact.css">
 
 			<form name="FFAA Contact" method="post" action="/Contacted" netlify>
