--- a/src/pages/sideloading.astro
+++ b/src/pages/sideloading.astro
@@ -2,7 +2,7 @@
 import Base from "../layouts/base.astro"
 ---
 
-<Base title="Sideloading">
+<Base title="Sideloading" searchable>
 	<h2 slot="header">Firefox OS v1.2+ Sideloading Instructions</h2>
 
 <ol>
