--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -2,14 +2,14 @@
 import Categories from "../components/categories.astro"
 ---
 
-<nav id="nav" popover aria-label="Site Navigation">
+<nav id="nav" aria-label="Site Navigation" popover>
 	<ul>
 		<li><a href="/all/1">All Apps</a></li>
 		<li><a href="/packaged/1">Packaged</a></li>
 		<li><a href="/hosted/1">Hosted</a></li>
 		<li><a href="/dead/1">Dead Hosted</a></li>
 		<li><a href="/privileged/1">Privileged</a></li>
-		<li id="pwas_link" hidden><a href="/pwa/1">PWA</a></li>
+		<li id="pwas_link" hidden><a href="/pwa">PWA</a></li>
 	</ul>
 	<Categories/>
 </nav>
