WIP: design tokens and theme setup

--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -4,6 +4,7 @@ import Footer from "../components/footer.astro"
 import Navigation from "../components/navigation.astro"
 import Metadata from "../components/common_metadata.astro"
 import Theme from "../components/theme_inputs.astro"
+import "../styles/index.css";
 
 let { title } = Astro.props
 ---
