--- a/src/pages/style-guide.astro
+++ b/src/pages/style-guide.astro
@@ -1,23 +1,18 @@
 ---
 import '../styles/fonts.css'
 
-// Import all your icons
-import * as AppTypesIcons from '../components/icons/app-types/index'
-import * as BrandIcons from '../components/icons/brand/index'
-import * as CategoryIcons from '../components/icons/categories/index'
-import * as LabelIcons from '../components/icons/labels/index'
-import * as NavigationIcons from '../components/icons/navigation/index'
-import * as RatingIcons from '../components/icons/ratings/index'
+// Import all icons
+import * as Icons from '../components/icons/index.js';
 
-// Collect icons into categories for display
+// Group icons by category
 const iconGroups = [
-  { name: 'App Types', icons: AppTypesIcons },
-  { name: 'Brand', icons: BrandIcons },
-  { name: 'Categories', icons: CategoryIcons },
-  { name: 'Labels', icons: LabelIcons },
-  { name: 'Navigation', icons: NavigationIcons },
-  { name: 'Ratings', icons: RatingIcons },
-]
+  { name: 'App Types', icons: Icons.AppTypesIcons },
+  { name: 'Brand', icons: Icons.BrandIcons },
+  { name: 'Categories', icons: Icons.CategoryIcons },
+  { name: 'Labels', icons: Icons.LabelIcons },
+  { name: 'Navigation', icons: Icons.NavigationIcons },
+  { name: 'Ratings', icons: Icons.RatingIcons },
+];
 
 // Example tokens
 const colorTokens = [
